# clean-language-compiler

./: --output  --verbose  -o  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Language-Specification.md  MODULE_ASYNC_SUMMARY.md  Makefile  PRIORITY_TASKS.md  README.md  TASKS.md  advanced_parser_standalone_test.rs  analyze_wasm.js  array_test.cln  array_test.wasm  basic_test.clean  basic_test.cln  class_with_methods.cln  clean_demo.cln  complex_test.cln  complex_test2.cln  comprehensive_demo.cln  comprehensive_feature_demo.cln  comprehensive_http_test.clean  comprehensive_list_test.wasm  comprehensive_operators_test.cln  comprehensive_web_test.wasm  correct_test.wasm  correct_test.wat  debug_arithmetic.cln  debug_arithmetic.wasm  debug_empty.wasm  debug_functions.cln  debug_functions.cln.wasm  debug_lib_output.wasm  debug_multiple_vars.clean.wasm  debug_no_print.clean  debug_no_print.wasm  (+501 more)
.cargo/: config.toml
.cursor/: cursor-best-practices.md
.documentation/: README.md  development-guide.md  parser.md  project-overview.md  semantic-analysis.md  standard-library.md  webassembly.md
.github/workflows/: ci.yml  release.yml
demo_examples/: 01_hello_world.cln  02_arithmetic.cln  02_simple_math.cln  03_functions.cln  03_simple_function.cln  04_lists.cln  05_classes.cln  06_strings.cln  07_control_flow.cln  arithmetic_correct.cln  basic_test.cln  comprehensive.cln  conditionals.cln  functions_correct.cln  hello_braces.cln  hello_correct.cln  simple_list.cln  variables.cln
docs/: async_architecture_fix.md  next_steps.md  wasm_native_async_solution.md
docs/guides/: user-guide.md
docs/language/: Clean_Language_ORM_Specification.md  Clean_Language_Specification.md  SOFTWARE_SPECIFICATION.md  clean-language-origin.txt  clean-language-wasm.md  compiler-specs.md  language-reference- old.md  language-reference.md  stdlib.md
docs/tasks/: tasks.md  testing-plan.md
docs/tools/: DEBUGGING_SPECIFICATION.md  IMPLEMENTATION_SUMMARY.md  MODULE_ASYNC_IMPLEMENTATION.md  MODULE_ASYNC_SUMMARY.md  debugging-specification.md  implementation-tools.md
examples/: array_instance_test.clean  array_test.clean  basic_string_test.cln  complex_example.cl  comprehensive_test.clean  debug_test.cln  error_handling.cln  error_handling_test.clean  grammar_test.cln  grammar_test.cln.wasm  hello.cln  hello_world.cl  hello_world.clean  math_test.clean  minimal.clean  minimal.clean.wasm  simple.cl  simple_array_instance_test.clean  simple_string_builtin.cln  simple_string_test.clean  simple_test.cln  stdlib_test.cln  string_interpolation_test.clean  string_test.clean  string_utils_test.clean  test_async_programming.clean  test_background_functions.clean  test_minimal.cln  test_minimal.cln.wasm  test_module_imports.clean  test_module_system.clean  test_printf.cln  test_simple_inheritance.clean  test_simple_inheritance.clean.wasm  test_stdlib.cln
modules/: ArrayOps.clean  FileReader.clean  ListOps.clean  MathUtils.clean  StringOps.clean  TestModule.clean
scripts/: README.md  cleanup_workspace.sh  fix_all.sh  fix_call_indirect.sh  fix_errors.sh  fix_wasm_types.sh  run_integration_tests.sh  verify_fixes.sh
src/: lib.rs  main.clean  main.rs
src/ast/: mod.rs
src/codegen/: instruction_generator.rs  memory.rs  mod.rs  mod.rs.backup2  mod.rs.bak  mod.rs.bak2  mod.rs.bak3  mod.rs.bak4  string_pool.rs  tests.rs  type_manager.rs
src/debug/: mod.rs
src/error/: mod.rs
src/host/: mod.rs
src/module/: mod.rs
src/optimizer/: mod.rs
src/package/: mod.rs
src/parser/: class_parser.rs  expression_parser.rs  grammar.pest  grammar.rs  mod.rs  parser_impl.rs  program_parser.rs  statement_parser.rs  type_parser.rs
src/runtime/: async_runtime.rs  file_io.rs  future_resolver.rs  http_client.rs  mod.rs  task_scheduler.rs
src/semantic/: mod.rs  scope.rs  type_checker.rs  type_constraint.rs
src/stdlib/: array_class.rs  array_ops.rs  basic_ops.rs  collection_ops.rs  console_ops.rs  date_ops.rs  error.rs  file_class.rs  file_ops.rs  format_ops.rs  http_class.rs  http_ops.rs  list_behavior.rs  list_class.rs  list_ops.rs  math_class.rs  matrix_ops.rs  memory.rs  mod.rs  numeric_ops.rs  random_ops.rs  string_class.rs  string_ops.rs  string_ops.rs.bak  time_ops.rs  type_conv.rs  utility_ops.rs
src/tests/: compiler_fixes_test.rs  integration_tests.rs  memory_tests.rs  mod.rs  parser_complex_test.rs  simple_test_runner.rs  test_runner.rs
src/types/: mod.rs
src/validation/: mod.rs
tests/: README.md  advanced_loops_test.clean  basic_examples_test.rs  codegen_tests.rs  collections_test.clean  compiler_tests.rs  complex_syntax_advanced.cln  complex_syntax_test.cln  end_to_end_tests.rs  error_handling_tests.rs  generic_classes_test.clean  generic_functions_test.clean  grammar_rules_tests.rs  http_client_test.clean  integration_tests.rs  integration_tests.rs.bak10  integration_tests.rs.bak5  integration_tests.rs.bak6  integration_tests.rs.bak7  integration_tests.rs.bak9  list_properties_test.clean  list_properties_test_tabs.clean  minimal_http_test.clean  minimal_start_test.clean  minimal_start_test.wasm  semantic_tests.rs  simple_http_test.clean  simple_integer_test.clean  simple_test.rs  simple_wasmtime_test.clean  simple_wasmtime_test.wasm  stdlib_tests.rs  test_utils.rs  type_constraints_test.clean  type_conversion_tests.rs
tests/clean_files/: 00_minimal.cln  00_minimal_no_strings.cln  01_hello_world.cln  02_variables_basic.cln  03_arithmetic_operations.cln  04_comparison_operations.cln  05_logical_operations.cln  06_type_conversions.cln  07_lists_basic.cln  08_matrices.cln  09_type_inference.cln  10_functions_basic.cln  11_functions_overloading.cln  12_functions_recursion.cln  13_functions_generics.cln  14_classes_basic.cln  15_classes_inheritance.cln  16_classes_polymorphism.cln  17_control_flow_if.cln  (+48 more)
(+56 files in other folders)
