[package]
name = "clean-language-compiler"
version = "0.1.4"
authors = ["Ivan Pasco Lizarraga"]
edition = "2021"
homepage = "https://www.cleanlanguage.dev"
repository = "https://github.com/cleanlang/clean-language-compiler"
description = "A modern, type-safe programming language that compiles to WebAssembly"
license = "MIT"


[dependencies]
# Parsing
pest = "2.7"
pest_derive = "2.7"
lazy_static = "1.5"

# WebAssembly
wasm-encoder = "0.35"
wasmparser = "0.121"
wasmtime = "16.0"
wat = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Package management
dirs = "5.0"

# Utilities (only used in specific utility binaries)
regex = "1.11"
rand = "0.8"

# HTTP client for real network requests
# HTTP client temporarily disabled

[profile.release]
# WebAssembly optimization settings for best performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster dev builds while maintaining debug info
opt-level = 1
debug = true

[dev-dependencies]
# Testing
insta = "1.34"
pretty_assertions = "1.4"
tempfile = "3.8"

# Main compiler binary
[[bin]]
name = "clean-language-compiler"
path = "src/main.rs"

# Core compiler binary (alternative interface)
[[bin]]
name = "cleanc"
path = "src/bin/cleanc.rs"

# Short command line interface
[[bin]]
name = "cln"
path = "src/bin/cln.rs"

# Essential debugging tools
[[bin]]
name = "debug_parser"
path = "src/bin/debug_parser.rs"

[[bin]]
name = "debug_wasm"
path = "src/bin/debug_wasm.rs"

# WebAssembly utilities
[[bin]]
name = "wat2wasm"
path = "src/bin/wat2wasm.rs"

[[bin]]
name = "wasm2wat"
path = "src/bin/wasm2wat.rs"

# Runtime testing
[[bin]]
name = "wasmtime_runner"
path = "src/bin/wasmtime_runner.rs"


[lib]
name = "clean_language_compiler"
path = "src/lib.rs"

# Temporarily commenting out nonexistent workspace members
#[workspace]
#members = [
#    "parser_test",
#    "parser_fix_test"
#]
#resolver = "2"

#[workspace.dependencies]
#pest = "2.7"
#pest_derive = "2.7" 
# HTTP client temporarily disabled
